@@ -4,6 +4,3 @@
 -return receipts
 -crc
 -s.e.a.t. (fsp-1015)
--uue and other encodings for outgoing mails
--use emailFrom, emailSubj and emailEncoding from fidoconfig
-
