@@ -35,6 +35,6 @@ LogDir		/home/fido/logs           # Optional
 # Links definition
 # ----------------
 
-# ----- AKA ----------- Email ----------------- Name ----------------------
-Link	4:905/210	german@linuxfreak.com	German Theler
-#Link	4:905/209.10	point@somesite.com	Dope Point
+# ----- AKA ----------- Email ----------------- Encoding ------ Name ---------
+Link	4:905/210	german@linuxfreak.com	MIME		German Theler
+Link	4:905/209.10	point@somesite.com	UUE		Dope Point
