@@ -7,12 +7,4 @@
  *
  */
 
-#define UNKNOWN          0
-#define MULTIPART        1
-#define APPLICATION      2
-
-#define TEXT             3
-#define BASE64           4
-#define QUOTED_PRINTABLE 5
-#define UUENCODE         6
 
