@@ -1,6 +1,6 @@
 /* ------------------------------------------------------------------------
  * send.h
- *     Default strings to put in the emails
+ *     Default strings
  * ------------------------------------------------------------------------
  *
  *  This file is part of EMAILPKT
@@ -8,8 +8,7 @@
  */
 
 /* String to put in the body of the message if no one is found */
-#define DEFAULTBODY "This message contains a MIME Base64 encoded FTN packet."
+#define DEFAULTBODY "This message contains a Fidonet bundle."
 
 /* Full path to the sendmail binary. This can be a symlink! */
 #define SENDMAIL    "/usr/sbin/sendmail"
-/*#define SENDMAIL    "/usr/lib/sendmail"*/
